--- a/xmarksthespot.css
+++ b/xmarksthespot.css
@@ -1,7 +1,238 @@
-.box {
-    background-color: black;
-    border: 3px solid white;
-    font-size: 80px;
-    color: #ffffff;
-    border-radius: 10px 10px 10px 10px;
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
+*,
+:before,
+:after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Indie Flower', cursive;
+}
+::selection {
+    color: #fff;
+    background: #cbcbcb;
+}
+body {
+    background: #cbcbcb;
+}
+
+p {
+    font-family: 'Indie Flower', cursive;
+    font-weight: bold;
+    font-size: 16pt;
+    letter-spacing: 3px;
+    padding: 0 0.4em;
+    width: -moz-fit-content;
+    width: -webkit-fit-content;
+    width: fit-content;
+    margin: 2rem auto 0;
+    filter: url(#chalk);
+}
+
+.select-box,
+.gameplay,
+.results {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: all 0.3s ease;
+}
+.select-box {
+    background: #ffffff;
+    padding: 20px 25px 25px;
+    border-radius: 5px;
+    max-width: 400px;
+    width: 100%;
+}
+.select-box.hide {
+    opacity: 0;
+    pointer-events: none;
+}
+.select-box header {
+    font-size: 30px;
+    font-weight: 600;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #cbcbcb;
+}
+
+.select-box .title {
+    font-size: 22px;
+    font-weight: 500;
+    margin: 20px 0;
+}
+.select-box .setup {
+    display: flex;
+    width: 100%;
+}
+
+.select-box title {
+    margin: 20px 0;
+    font-size: 36pt;
+    text-align: center;
+    font-family: 'Indie Flower', cursive;
+    font-weight: bold;
+    letter-spacing: 3px;
+    width: -moz-fit-content;
+    width: -webkit-fit-content;
+    width: fit-content;
+    margin: 2rem auto 0;
+    filter: url(#chalk);
+}
+.select-box .setup {
+    display: flex;
+    width: 100%;
+}
+.setup button {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 0;
+    border: none;
+    background: #cbcbcb;
+    border-radius: 5px;
+    color: #fff;
+    outline: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.setup button:hover,
+.newgamebutton button:hover {
+    transform: scale(0.96);
+}
+.setup button.playerX {
+    margin-right: 5px;
+}
+.setup button.playerO {
+    margin-left: 5px;
+}
+
+.gameplay {
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
+}
+.gameplay.show {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
+}
+.gameplay .details {
+    padding: 7px;
+    border-radius: 5px;
+    background: #fff;
+}
+.gameplay .players {
+    width: 100%;
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+}
+.players span {
+    position: relative;
+    z-index: 2;
+    color: #cbcbcb;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 0;
+    width: 100%;
+    text-align: center;
+    cursor: default;
+    user-select: none;
+    transition: all 0.3 ease;
+}
+.players.active span:first-child {
+    color: #fff;
+}
+.players.active span:last-child {
+    color: #cbcbcb;
+}
+.players span:first-child {
+    color: #fff;
+}
+.players .slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: #cbcbcb;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+.players.active .slider {
+    left: 50%;
+}
+.players.active span:first-child {
+    color: #56baed;
+}
+.players.active span:nth-child(2) {
+    color: #fff;
+}
+.players.active .slider {
+    left: 50%;
+}
+.board {
+    margin-top: 20px;
+}
+.board section {
+    display: flex;
+    margin-bottom: 1px;
+}
+.board section span {
+    display: block;
+    height: 90px;
+    width: 90px;
+    margin: 2px;
+    color: #cbcbcb;
+    font-size: 40px;
+    line-height: 80px;
+    text-align: center;
+    border-radius: 5px;
+    background: #fff;
+}
+
+.results {
+    padding: 25px 20px;
+    border-radius: 5px;
+    max-width: 400px;
+    width: 100%;
+    opacity: 0;
+    text-align: center;
+    background: #fff;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
+}
+.results .show {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
+}
+.results .winner {
+    font-size: 30px;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+}
+.results .winner p {
+    font-weight: 600;
+    margin: 0 5px;
+}
+.results .newgamebutton {
+    width: 100%;
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+}
+.newgamebutton button {
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 20px;
+    border: none;
+    background: #cbcbcb;
+    border-radius: 5px;
+    color: #fff;
+    outline: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
